--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -95,10 +95,7 @@
                 <div class="box">
                     <h3 id="abh3" class="text-warning"><i class="fas fa-hand-holding-medical"></i> 24x7 Alvailable
                     </h3>
-                    <p id="ps">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi vitae dolore
-                        perferendis
-                        deleniti
-                        officiis consectetur iure aliquam architecto non quaerat, nemo id expedita quae.</p>
+                    <p id="ps">Almost Overnight" Pet Sitting service provides your pets with an extended evening visit in your home as well as...</p>
                 </div>
                 <div class="box">
                     <h3 id="abh3" class="text-warning"><i class="fas fa-user-md"></i> All Pet Doctor</h3>
@@ -192,46 +189,49 @@
 
     <div class="row col-12" id="doc">
         <div class="heado">
-            <h1 class="h1 text-warning">OUR spacial<span class="text-white"> DOCTORS</span></h1>
+            <h1 class="h1 text-warning">OUR special<span class="text-white"> DOCTORS</span></h1>
 
         </div>
 
 
         <div class="card">
             <div class="image" id="img3">
-                <img src="{% static 'images/09.jpg' %}" alt="">
+                <img src="{% static 'images/doctor001.jpg' %}" alt="">
             </div>
             <div class="info">
-                <h3 id="h3">DR.jhon</h3>
+                <h3 id="h3">Dr.Dayana</h3>
                 <h4>Doctor of Veterinary Medicine</h4>
                 <span id="span4">Dr. Gill graduated ECFVG at Oklahoma State University College of Veterinary
                     medicine Sciences.</span> <br> <br>
-                <button class="btn btn-success rounded-pill  mb-4">payment</button>
+                <button class="btn btn-success rounded-pill  mb-4" data-bs-toggle="modal"
+                data-bs-target="#appoinmentmodal">Appoinment</button>
+               
                 <div class="icons">
-                    <a href=""><i class="fab fa-facebook" style="font-size: 40px;"></i></a>
-                    <a href=""><i class="fab fa-instagram" style="font-size: 40px;"></i></a>
-                    <a href=""><i class="fab fa-twitter" style="font-size: 40px;"></i></a>
+                    <a href="http://www.facebook.com/dayana"><i class="fab fa-facebook" style="font-size: 40px;"></i></a>
+                    <a href="http://www.instagram.com/dayana"><i class="fab fa-instagram" style="font-size: 40px;"></i></a>
+                    <a href="http://www.twitter.com/dayana"><i class="fab fa-twitter" style="font-size: 40px;"></i></a>
 
                 </div>
             </div>
         </div>
         <div class="card">
             <div class="image" id="img3">
-                <img src="{% static 'images/05.jpg' %} " alt="">
+                <img src="{% static 'images/doctor02.jpg' %} " alt="">
             </div>
             <div class="info">
-                <h3 id="h3">DR.jhon</h3>
+                <h3 id="h3">Dr.Bond</h3>
                 <h4>Doctor of Veterinary Medicine</h4>
                 <span id="span4">Dr. Stevens started working at the clinic in the summer of 2005. It was always her
                     dream job as a kid.
 
                 </span> <br> <br>
-                <button class="btn btn-success rounded-pill mb-4">payment</button>
+                <button class="btn btn-success rounded-pill  mb-4" data-bs-toggle="modal"
+                data-bs-target="#appoinmentmodal">Appoinment</button>
 
                 <div class="icons">
-                    <a href=""><i class="fab fa-facebook" style="font-size: 40px;"></i></a>
-                    <a href=""><i class="fab fa-instagram" style="font-size: 40px;"></i></a>
-                    <a href=""><i class="fab fa-twitter" style="font-size: 40px;"></i></a>
+                    <a href="http://www.facebook.com/bond"><i class="fab fa-facebook" style="font-size: 40px;"></i></a>
+                    <a href="http://www.instagram.com/bond"><i class="fab fa-instagram" style="font-size: 40px;"></i></a>
+                    <a href="http://www.twitter.com/bond"><i class="fab fa-twitter" style="font-size: 40px;"></i></a>
 
 
                 </div>
@@ -239,19 +239,20 @@
         </div>
         <div class="card">
             <div class="image" id="img3">
-                <img src="{% static 'images/06.jpg' %}" alt="">
+                <img src="{% static 'images/doctor03.jpg' %}" alt="">
             </div>
             <div class="info">
-                <h3 id="h3">DR.jhon</h3>
+                <h3 id="h3">Dr.Ruby rose</h3>
                 <h4>Doctor of Veterinary Medicine</h4>
                 <span id="span4">Dr. Gill graduated ECFVG at Oklahoma State University College of Veterinary
                     medicine Sciences.</span> <br> <br>
-                <button class="btn btn-success rounded-pill  mb-4">payment</button>
+                    <button class="btn btn-success rounded-pill  mb-4" data-bs-toggle="modal"
+                    data-bs-target="#appoinmentmodal">Appoinment</button>
 
                 <div class="icons">
-                    <a href=""><i class="fab fa-facebook" style="font-size: 40px;"></i></a>
-                    <a href=""><i class="fab fa-instagram" style="font-size: 40px;"></i></a>
-                    <a href=""><i class="fab fa-twitter" style="font-size: 40px;"></i></a>
+                    <a href="http://www.facebook.com/ruby_rose"><i class="fab fa-facebook" style="font-size: 40px;"></i></a>
+                    <a href="http://www.instagram.com/ruby_rose"><i class="fab fa-instagram" style="font-size: 40px;"></i></a>
+                    <a href="http://www.twitter.com/ruby_rose"><i class="fab fa-twitter" style="font-size: 40px;"></i></a>
 
 
 
@@ -303,180 +304,4 @@
 </section>
 
 
-<!-- appoinment -->
-
-
-<div class="modal fade" id="appoinmentmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-
-    <div class="modal-dialog" role="document">
-        <div class="modal-content rounded-5 shadow">
-            <div class="modal-header p-5 pb-4 border-bottom-0">
-                <!-- <h5 class="modal-title">Modal title</h5> -->
-                <h2 class="fw-bold mb-0 text-center">Appoinment From</h2>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <p class="text-center">"Urgent pet care is conveniently located to provide your pet!"</p>
-            <div class="modal-body p-5 pt-0">
-                <h4>client/pet owner information</h4>
-                <form class="row g-3 needs-validation" novalidate>
-                    <div class="col-md-6 position-relative">
-                        <label for="validationTooltip01" class="form-label">First name</label>
-                        <input type="text" class="form-control" id="validationTooltip01" value="" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid name.
-                        </div>
-                    </div>
-                    <div class="col-md-6 position-relative">
-                        <label for="validationTooltip02" class="form-label">Last name</label>
-                        <input type="text" class="form-control" id="validationTooltip02" value="" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid name.
-                        </div>
-                    </div>
-                    <div class="col-md-6 position-relative">
-                        <label for="validationTooltipUsername" class="form-label">phonenumber</label>
-                        <div class="input-group has-validation">
-                            <input type="text" class="form-control" id="validationTooltipUsername"
-                                aria-describedby="validationTooltipUsernamePrepend" required>
-                            <div class="invalid-tooltip">
-                                Please choose a unique and valid phonenumber.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 position-relative">
-                        <label for="validationTooltipUsername" class="form-label">Email</label>
-                        <div class="input-group has-validation">
-                            <input type="email" class="form-control" id="validationTooltipUsername"
-                                aria-describedby="validationTooltipUsernamePrepend" required>
-                            <div class="invalid-tooltip">
-                                Please choose a unique and valid email.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid Address.
-                        </div>
-                    </div>
-                    <div class="col-md-6 position-relative">
-                        <label for="validationTooltip05" class="form-label">Zip</label>
-                        <input type="text" class="form-control" id="validationTooltip05" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid zip.
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">Appoinment date</label>
-                        <input type="date" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid Appoinment Date.
-                        </div>
-                    </div>
-                    <div class="col-4 position-relative">
-                        <label for="validationTooltip03" class="form-label">Time</label>
-                        <input type="Time" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid Time.
-                        </div>
-                    </div>
-                    <h4>Pet info</h4>
-                    <label for="validationTooltip04" class="form-label">Select your pet</label>
-                    <select class="form-select" id="validationTooltip04" required>
-                        <option selected disabled value="">Dog</option>
-                        <option>Cat</option>
-                        <option>Bird</option>
-                        <option>other</option>
-                    </select>
-                    <div class="invalid-tooltip">
-                        Please select a valid state.
-                    </div>
-                    <div class="col-lg-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">Petname</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid petname.
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">pet breed</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid petbreed.
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">Appoinment date</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid Appoinment Date.
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">Pet colour</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid Pet colour.
-                        </div>
-                    </div>
-                    <div>
-                        <h6>Pet Sex</h6>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                value="option1" checked>
-                            <label class="form-check-label" for="exampleRadios1">
-                                male
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
-                                value="option2">
-                            <label class="form-check-label" for="exampleRadios2">
-                                Neutered Male
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
-                                value="option3">
-                            <label class="form-check-label" for="exampleRadios3">
-                                female
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
-                                value="option3">
-                            <label class="form-check-label" for="exampleRadios3">
-                                Spayed Female
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">Pet Age /DOB</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid Pet age.
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative">
-                        <label for="validationTooltip03" class="form-label">Pet Weight (kgs or ibs)</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Please provide a valid Pet Weight.
-                        </div>
-                    </div>
-                    
-                    <div class="col-12">
-                        <button class="btn btn-primary" type="submit">Submit</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-
-</div>
 {% endblock %}
-
-<!-- <div class="d-grid gap-2 col-6 mx-auto">
-                        <button type="button" class="btn btn-warning rounded-pill " id="submitbtn">SUBMIT</button>
-                    </div> -->
