--- a/app2/templates/admaster.html
+++ b/app2/templates/admaster.html
@@ -32,7 +32,7 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
 
-                            <a href="adhome" class="nav-link text-white">
+                            <a href="addashboard" class="nav-link text-white">
                                 <i class="fas fa-columns mx-auto mb-1" width="24" height="24"></i>
                                 Dashboard
                             </a>
@@ -44,8 +44,8 @@
                                 Appoinment</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="appoinment">Appoinment</a></li>
-                                <li><a class="dropdown-item" href="#">View Appoinments</a></li>
-                                <li><a class="dropdown-item" href="#">canceled appoinment</a></li>
+                                <li><a class="dropdown-item" href="viewappoinments">View Appoinments</a></li>
+                                <li><a class="dropdown-item" href="canceledappoinment">canceled appoinment</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -71,8 +71,8 @@
                                 role="button" aria-expanded="false"> <span class="fab fa-deezer mx-auto mb-1"></span>
                                 Department</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Doctors</a></li>
+                                <li><a class="dropdown-item" href="#">Staffs</a></li>
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -87,15 +87,15 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#"
                                 role="button" aria-expanded="false"> <span
-                                    class="fas fa-users-cog mx-auto mb-1"></span>Settings</a>
+                                    class="fas fa-users-cog mx-auto mb-1"></span>Oersth</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="#">Payments</a></li>
+                                <li><a class="dropdown-item" href="#">Prescription</a></li>
+                                <li><a class="dropdown-item" href="#">Feedback Views</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                                <li><a class="dropdown-item" href="#">Quries</a></li>
                             </ul>
                         </li>
 
