--- a/app1/templates/about.html
+++ b/app1/templates/about.html
@@ -46,7 +46,12 @@
     }
 </style>
 
-
+<section class="py-5 text-center container">
+    <div class="row py-lg-5">
+      <h1>About us</h1>
+      <p> "Petos care your pets" </p>
+    </div>
+  </section>
 <section class="about us" id="aboutus">
     <div class="container">
         <div class="row">
@@ -78,6 +83,53 @@
     </div>
 </div>
 
+
+<!--  -->
+
+<div class="container px-4 py-5" id="featured-3">
+    <h2 class="pb-2 border-bottom">Columns w</h2>
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="feature col">
+        <div class="feature-icon">
+          <i class="fas fa-hand-holding-medical text-danger" style="font-size: 50px;" ></i>
+        </div>
+        <h2 class="mt-2 text-capitalize">Our Employees Care</h2>
+        <p class="card-text">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to identify on the runway heading towards.</p>
+        <button t   ype="button" class="btn btn-warning rounded-pill me-2 w-50 fw-bold" data-bs-toggle="modal"
+                data-bs-target="#appoinmentmodal">
+                Appoinment
+            </button>
+      </div>
+      <div class="feature col">
+        <div class="feature-icon">
+          <i class="fas fa-gift text-danger" style="font-size: 50px;" ></i>
+        </div>
+        <h2 class="mt-2 text-capitalize">Happy Enviornment</h2>
+        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation will close.</p>
+        <button t   ype="button" class="btn btn-warning rounded-pill me-2 w-50 fw-bold" data-bs-toggle="modal"
+                data-bs-target="#appoinmentmodal">
+                Appoinment
+            </button>
+      </div>
+      <div class="feature col">
+        <div class="feature-icon">
+          <i class="fas fa-trophy text-danger" style="font-size: 50px;" ></i>
+        </div>
+        <h2 class="mt-2 text-capitalize" >we are here to stay</h2>
+        <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps information highway.</p>
+        <button t   ype="button" class="btn btn-warning rounded-pill me-2 w-50 fw-bold" data-bs-toggle="modal"
+                data-bs-target="#appoinmentmodal">
+                Appoinment
+            </button>
+      </div>    
+      
+    
+    </div>
+  </div>    
+<!--  -->
+
+
+
 <div class="container">
     <div class="row mt-5">
         <div class="container mt-4 d-flex justify-content-center">
@@ -108,7 +160,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="cards">
-                        <div class=" third bg-white p-4 text-center"> <img src="{% static 'images/doc2.jpg' %}"width="100%" />
+                        <div class=" third bg-white p-4 text-center"> <img src="{% static 'images/nursesbg.jpg' %}"width="100%" />
                             <p><h5>Special Docters</h5></p> 
                             <p class="line3">We'll help you get started and be there when you have questions</p>
                         </div>
