--- a/app1/templates/master.html
+++ b/app1/templates/master.html
@@ -30,7 +30,8 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Ninth navbar example" id="navhd">
     <div class="container-xl">
-      <a href="index" class="navbar-brand"><img src="{% static 'images/logo.png' %}" alt="logo" id="logo" width="140px"></a>
+      <a href="index" class="navbar-brand"><img src="{% static 'images/logo.png' %}" alt="logo" id="logo"
+          width="140px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL"
         aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,29 +40,26 @@
       <div class="collapse navbar-collapse" id="navbarsExample07XL">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto fs-6">
           <li class="nav-item ms-lg-2">
-            <a class="nav-link active" aria-current="page" href="index" id="ab">Home</a>
+            <a class="nav-link active fw-bold" aria-current="page" href="index" id="ab">Home</a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a class="nav-link active" href="about" id="ab">About Us</a>
+            <a class="nav-link active fw-bold" href="about" id="ab">About Us</a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a class="nav-link active" href="services" id="ab">Services</a>
+            <a class="nav-link active fw-bold" href="services" id="ab">Services</a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a class="nav-link active" href="#shop" id="ab">pet foods</a>
+            <a class="nav-link active fw-bold" href="petfood" id="ab">pet foods</a>
           </li>
           <li class="nav-item ms-lg-2">
-            <a class="nav-link active" href="#blog" id="ab">Blog</a>
-          </li>
-          <li class="nav-item ms-lg-2">
-            <a class="nav-link active" href="#page" id="ab">Page</a>
+            <a class="nav-link active fw-bold" href="blog" id="ab">Blog</a>
           </li>
 
         </ul>
         <form class="d-flex">
           <div class="button">
 
-            <a  class="btn btn-warning rounded-pill" href="tel:9746351731"><i class="fas fa-phone"></i>+91
+            <a class="btn btn-warning rounded-pill" href="tel:9746351731"><i class="fas fa-phone"></i>+91
               9746351731</a>
 
             <button type="button" class="btn btn-dark me-1 rounded-pill" data-bs-toggle="modal"
@@ -91,7 +89,8 @@
         <div class="row mt-4">
           <!--Grid column-->
           <div class="col-lg-4 col-md-12 mb-2 mb-md-0">
-            <h5 class="text-uppercase mb-2" style="margin-right: 90px;"><img src="{% static 'images/logo.png' %}" alt="" width="125px">About Petos</h5>
+            <h5 class="text-uppercase mb-2" style="margin-right: 90px;"><img src="{% static 'images/logo.png' %}" alt=""
+                width="125px">About Petos</h5>
 
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
@@ -101,14 +100,16 @@
 
             <div class="mt-4">
               <!-- Facebook -->
-              <a type="button" class="btn btn-floating btn-warning btn-lg" href="#"><i
+              <a type="button" class="btn btn-floating btn-warning btn-lg" href="http://www.facebook.com/petos"><i
                   class="fab fa-facebook-f"></i></a>
               <!-- Dribbble -->
-              <a type="button" class="btn btn-floating btn-warning btn-lg" href="#"><i class="fab fa-instagram"></i></a>
+              <a type="button" class="btn btn-floating btn-warning btn-lg" href="http://www.instagram.com/petos"><i
+                  class="fab fa-instagram"></i></a>
               <!-- Twitter -->
-              <a type="button" class="btn btn-floating btn-warning btn-lg" href="#"><i class="fab fa-twitter"></i></a>
+              <a type="button" class="btn btn-floating btn-warning btn-lg" href="http://www.twitter.com/petos"><i
+                  class="fab fa-twitter"></i></a>
               <!-- Google + -->
-              <a type="button" class="btn btn-floating btn-warning btn-lg" href="#"><i
+              <a type="button" class="btn btn-floating btn-warning btn-lg" href="http://www.google.com/petos"><i
                   class="fab fa-google-plus-g"></i></a>
               <!-- Linkedin -->
             </div>
@@ -298,6 +299,181 @@
 
 
   <!-- end signup -->
+
+
+  <!-- start appoinment -->
+
+
+
+
+
+  <div class="modal fade" id="appoinmentmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+    <div class="modal-dialog" role="document">
+      <div class="modal-content rounded-5 shadow">
+        <div class="modal-header p-5 pb-4 border-bottom-0">
+          <!-- <h5 class="modal-title">Modal title</h5> -->
+          <h2 class="fw-bold mb-0 text-center">Appoinment From</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <p class="text-center">"Urgent pet care is conveniently located to provide your pet!"</p>
+        <div class="modal-body p-5 pt-0">
+          <h4>client/pet owner information</h4>
+          <form class="row g-3 needs-validation" novalidate>
+            <div class="col-md-6 position-relative">
+              <label for="validationTooltip01" class="form-label">First name</label>
+              <input type="text" class="form-control" id="validationTooltip01" value="" required>
+              <div class="invalid-tooltip">
+                Please provide a valid name.
+              </div>
+            </div>
+            <div class="col-md-6 position-relative">
+              <label for="validationTooltip02" class="form-label">Last name</label>
+              <input type="text" class="form-control" id="validationTooltip02" value="" required>
+              <div class="invalid-tooltip">
+                Please provide a valid name.
+              </div>
+            </div>
+            <div class="col-md-6 position-relative">
+              <label for="validationTooltipUsername" class="form-label">phonenumber</label>
+              <div class="input-group has-validation">
+                <input type="text" class="form-control" id="validationTooltipUsername"
+                  aria-describedby="validationTooltipUsernamePrepend" required>
+                <div class="invalid-tooltip">
+                  Please choose a unique and valid phonenumber.
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 position-relative">
+              <label for="validationTooltipUsername" class="form-label">Email</label>
+              <div class="input-group has-validation">
+                <input type="email" class="form-control" id="validationTooltipUsername"
+                  aria-describedby="validationTooltipUsernamePrepend" required>
+                <div class="invalid-tooltip">
+                  Please choose a unique and valid email.
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 position-relative">
+              <label for="validationTooltip03" class="form-label">Address</label>
+              <input type="text" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid Address.
+              </div>
+            </div>
+            <div class="col-md-6 position-relative">
+              <label for="validationTooltip05" class="form-label">Zip</label>
+              <input type="text" class="form-control" id="validationTooltip05" required>
+              <div class="invalid-tooltip">
+                Please provide a valid zip.
+              </div>
+            </div>
+            <div class="col-lg-6 position-relative">
+              <label for="validationTooltip03" class="form-label">Appoinment date</label>
+              <input type="date" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid Appoinment Date.
+              </div>
+            </div>
+            <div class="col-4 position-relative">
+              <label for="validationTooltip03" class="form-label">Time</label>
+              <input type="Time" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid Time.
+              </div>
+            </div>
+            <h4>Pet info</h4>
+            <label for="validationTooltip04" class="form-label">Select your pet</label>
+            <select class="form-select" id="validationTooltip04" required>
+              <option selected disabled value="">Dog</option>
+              <option>Cat</option>
+              <option>Bird</option>
+              <option>other</option>
+            </select>
+            <div class="invalid-tooltip">
+              Please select a valid state.
+            </div>
+            <div class="col-lg-6 position-relative">
+              <label for="validationTooltip03" class="form-label">Petname</label>
+              <input type="text" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid petname.
+              </div>
+            </div>
+            <div class="col-lg-6 position-relative">
+              <label for="validationTooltip03" class="form-label">pet breed</label>
+              <input type="text" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid petbreed.
+              </div>
+            </div>
+            <div class="col-lg-6 position-relative">
+              <label for="validationTooltip03" class="form-label">Pet issue</label>
+              <input type="text" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid Appoinment Date.
+              </div>
+            </div>
+            <div class="col-lg-6 position-relative">
+              <label for="validationTooltip03" class="form-label">Pet colour</label>
+              <input type="text" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid Pet colour.
+              </div>
+            </div>
+            <div>
+              <h6>Pet Sex</h6>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
+                  checked>
+                <label class="form-check-label" for="exampleRadios1">
+                  male
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                <label class="form-check-label" for="exampleRadios2">
+                  Neutered Male
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+                <label class="form-check-label" for="exampleRadios3">
+                  female
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+                <label class="form-check-label" for="exampleRadios3">
+                  Spayed Female
+                </label>
+              </div>
+            </div>
+            <div class="col-lg-6 position-relative">
+              <label for="validationTooltip03" class="form-label">Pet Age /DOB</label>
+              <input type="text" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid Pet age.
+              </div>
+            </div>
+            <div class="col-lg-6 position-relative">
+              <label for="validationTooltip03" class="form-label">Pet Weight (kgs or ibs)</label>
+              <input type="text" class="form-control" id="validationTooltip03" required>
+              <div class="invalid-tooltip">
+                Please provide a valid Pet Weight.
+              </div>
+            </div>
+
+            <div class="col-12">
+              <button class="btn btn-primary" type="submit">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!-- end appoinment -->
 
 
 
