--- a/app2/templates/nurse.html
+++ b/app2/templates/nurse.html
@@ -5,11 +5,10 @@
 <div class="container">
     <div class="row py-lg-3">
         <div class="col-lg-6 col-md-6 col-sm-6">
-            <h1>Doctors</h1>
+            <h1><i class="fas fa-user-nurse mx-auto mb-1"></i>Nurses</h1>
         </div>
         <div class="nav col-lg-6 col-md-6 col-sm-6  d-flex justify-content-end p-lg-3 ">
-            <button type="button" class="btn btn-dark rounded-pill " data-bs-toggle="modal"
-                data-bs-target="#addnurses">
+            <button type="button" class="btn btn-dark rounded-pill " data-bs-toggle="modal" data-bs-target="#addnurses">
                 Add Nurses
             </button>
         </div>
@@ -21,149 +20,200 @@
 
 <div class="container">
 
-    <!-- Three columns of text below the carousel -->
-    <div class="row  py-lg-5 text-center">
-        <div class="col-lg-3">
-
-            <img src="{% static 'images/nurse1.jpg' %}" class="bd-placeholder-img rounded-2 " width="200"
-                height="200" role="img" aria-label="Placeholder: 140x140" alt="">
-
-            <h2>Angelina</h2>
-            <p>DEPARTMENT :Clinical assistant</p>
-            <p>angelina@gmail.com</p>
-
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-        <div class="col-lg-3">
-            <img src="{% static 'images/nurse2.jpg' %}" class="bd-placeholder-img rounded-2 " width="200" height="200"
-                role="img" aria-label="Placeholder: 140x140" alt="">
-
-            <h2>maxlin</h2>
-            <p> DEPARTMENT :Kennel assistant</p>
-            <p>maxlinab@gmail.com</p>
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-        <div class="col-lg-3">
-            <img src="{% static 'images/nurse3.jpg' %}" class="bd-placeholder-img rounded-2 " width="200" height="200"
-                role="img" aria-label="Placeholder: 140x140" alt="">
-
-
-            <h2>Peter</h2>
-            <p>DEPARTMENT :Jack (or rather Jill) of all trades whose duties were many but not well defined 
-            </p>
-            <p>peter@gmail.com</p>
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-        <div class="col-lg-3">
-            <img src="{% static 'images/nurse4.jpg' %}" class="bd-placeholder-img rounded-2 " width="200" height="200"
-                role="img" aria-label="Placeholder: 140x140" alt="">
-
-
-            <h2>Bunny</h2>
-            <p>DEPARTMENT :Kennel assistant
-            </p>
-            <p>bunny@gmail.com</p>
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-    </div>
-    <div class="row  py-lg-1 text-center">
-        <div class="col-lg-3">
-
-            <img src="{% static 'images/nurse5.jpg' %}" class="bd-placeholder-img rounded-2 " width="200"
-                height="200" role="img" aria-label="Placeholder: 140x140" alt="">
-
-            <h2>Julie abraham</h2>
-            <p>DEPARTMENT :ocally employed people (usually women) with few relevant formal qualifications</p>
-            <p>julie@gmail.com</p>
-
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-        <div class="col-lg-3">
-            <img src="{% static 'images/nurse6.jpg' %}" class="bd-placeholder-img rounded-2 " width="200" height="200"
-                role="img" aria-label="Placeholder: 140x140" alt="">
-
-            <h2>Robert</h2>
-            <p> DEPARTMENT :Administrator </p>
-            <p>robert@gmail.com</p>
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-        <div class="col-lg-3">
-            <img src="{% static 'images/nurse7.jpg' %}" class="bd-placeholder-img rounded-2 " width="200" height="200"
-                role="img" aria-label="Placeholder: 140x140" alt="">
-
-
-            <h2>Samantha</h2>
-            <p>DEPARTMENT :Kennel assistant
-            </p>
-            <p>samantha@gmail.com</p>
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-        <div class="col-lg-3">
-            <img src="{% static 'images/nurse8.jpg' %}" class="bd-placeholder-img rounded-2 " width="200" height="200"
-                role="img" aria-label="Placeholder: 140x140" alt="">
-
-
-            <h2>Merry jhon</h2>
-            <p>DEPARTMENT :Clinic assistant
-            </p>
-            <p>ruby@gmail.com</p>
-            <p><a class="btn btn-secondary" href="#">Edit</a></p>
-        </div>
-    </div>
-
     <div class="row">
-        <table class="table">
+        <table id="dt-filter-select" class="table" cellspacing="0" width="100%">
             <thead>
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">First Name</th>
-                <th scope="col">phonenumber</th>
-                <th scope="col">Email</th>
-                <th scope="col">Department</th>
-                <th scope="col">file(photo)</th>
-                <th scope="col">D.o.B</th>
-                <th scope="col">Salary</th>
-                <th scope="col">change</th>
-                
-              </tr>
+                <tr>
+                    <th class="th-sm">Id
+                    </th>
+                    <th class="th-sm">Name
+                    </th>
+                    <th class="th-sm">Department
+                    </th>
+                    <th class="th-sm">phonenumber
+                    </th>
+                    <th class="th-sm">email
+                    </th>
+                    <th class="th-sm">Age
+                    </th>
+                    <th class="th-sm">Start date
+                    </th>
+                    <th class="th-sm">Salary
+                    </th>
+                    <th class="th-sm">Edit
+                    </th>
+                    <th class="th-sm">Remove
+                    </th>
+                   
+                </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Dr.Dayana</td>
-                <td>098766544</td>
-                <td>dayana@gmail.com</td>
-                <td>Companion Animal Veterinarians</td>
-                <td>photo</td>
-                <td>12-2-1976</td>
-                <td>47000</td>
-                <td><p><a class="btn btn-secondary" href="#">Edit</a></p></td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Dr.Dayana</td>
-                <td>098766544</td>
-                <td>bond12@gmail.com</td>
-                <td>Exotic Companion Mammal Practice</td>
-                <td>photo</td>
-                <td>9-3-1992</td>
-                <td>47000</td>
-                <td><p><a class="btn btn-secondary" href="#">Edit</a></p></td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Dr.Ruby rose</td>
-                <td>788766544</td>
-                <td>ruby@gmail.com</td>
-                <td>Companion Animal Veterinarians</td>
-                <td>photo</td>
-                <td>6-8-1990</td>
-                <td>30000</td>
-                <td><p><a class="btn btn-secondary" href="#">Edit</a></p></td>
-              </tr>
-            </tbody>
-          </table>
+                <tr>
+                    <td>1</td>
+                    <td>Angelina</td>
+                    <td>Clinical assistant</td>
+                    <td>98765432</td>
+                    <td>angelina@gmail.com</td>
+                    <td>25</td>
+                    <td>2011/04/25</td>
+                    <td>32000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>maxlin</td>
+                    <td>kannel assistant</td>
+                    <td>765645343</td>
+                    <td>maxlinab@gmail.com</td>
+                    <td>28</td>
+                    <td>2011/04/25</td>
+                    <td>34000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Peter</td>
+                    <td>JAck(or rather jill)</td>
+                    <td>3456577666</td>
+                    <td>peter@gmail.com</td>
+                    <td>23</td>
+                    <td>2011/04/25</td>
+                    <td>23000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Bunny</td>
+                    <td>kannel assistant</td>
+                    <td>98765432</td>
+                    <td>bunny@gmail.com</td>
+                    <td>34</td>
+                    <td>2011/04/25</td>
+                    <td>30000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Julie abraham</td>
+                    <td>ocally employed people</td>
+                    <td>98765432</td>
+                    <td>julie@gmail.com</td>
+                    <td>35</td>
+                    <td>2011/04/25</td>
+                    <td>45000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td> <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+
+                </tr>
+                <tr>
+                    
+                    <td>6</td>
+                    <td>Robert</td>
+                    <td>Administrator</td>
+                    <td>98765432</td>
+                    <td>Robert@gmail.com</td>
+                    <td>30</td>
+                    <td>2011/04/25</td>
+                    <td>35000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Samantha</td>
+                    <td>Kannel assistant</td>
+                    <td>98765432</td>
+                    <td>samantha@gmail.com</td>
+                    <td>23</td>
+                    <td>2011/04/25</td>
+                    <td>30000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Merry jhon</td>
+                    <td>Clinic assistant</td>
+                    <td>98765432</td>
+                    <td>merry@gmail.com</td>
+                    <td>27</td>
+                    <td>2011/04/25</td>
+                    <td>28000</td>
+                    <td>
+                        <button type="button" class="btn btn-primary  p-0">
+                            <h6>Edit</h6>
+                        </button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-danger  p-0">
+                            <h6>Remove</h6>
+                        </button>
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
+
+
     <!-- end doctors  -->
 
     <!-- modal in docter adding -->
@@ -180,6 +230,10 @@
 
                 <div class="modal-body p-5 pt-0">
                     <form class="row g-3">
+                        <div class="col-md-6">
+                            <label for="id" class="form-label">Nurse Id</label>
+                            <input type="number" class="form-control" id="id">
+                          </div>
                         <div class="col-12">
                             <input type="text" class="form-control" id="firstnames" placeholder="First name">
                         </div>
@@ -201,16 +255,22 @@
                                 <option selected>Clinical assistant</option>
                                 <option>Administrator </option>
                                 <option>Kennel assistant </option>
-                                <option>Jack (or rather Jill) of all trades whose duties were many but not well defined </option>
-                                <option>ocally employed people (usually women) with few relevant formal qualifications</option>
+                                <option>Jack (or rather Jill) of all trades whose duties were many but not well defined
+                                </option>
+                                <option>ocally employed people (usually women) with few relevant formal qualifications
+                                </option>
                             </select>
                         </div>
                         <div class="mb-3">
                             <label for="formFileMultiple" class="form-label">Add photo</label>
                             <input class="form-control" type="file" id="formFileMultiple" multiple>
                         </div>
+                        <div class="col-3">
+                            <label for="inputpet" class="form-label">Age</label>
+                            <input type="number" class="form-control">
+                        </div>
                         <div class="col-6">
-                            <label for="inputpet" class="form-label">Date of birth</label>
+                            <label for="inputpet" class="form-label">start date</label>
                             <input type="date" class="form-control" placeholder="Appoinmentdate"
                                 name="Appointment request" required>
                         </div>
@@ -229,5 +289,7 @@
 
     </div>
 
+    
 
-{% endblock %}
+
+    {% endblock %}
